@startuml
'https://plantuml.com/class-diagram

abstract class AbstractFile{
    String name, dateCreated
    String path
    + AbstractFile(String name, String dateCreated)
    + {abstract} String getTreeFolder()
    + String getPath()
    + {abstract} addItem(AbstractFile item)
    + {abstract} removeItem(AbstractFile item)
}
class File
class Folder

File --|> AbstractFile
Folder --|> AbstractFile
Folder *--> AbstractFile:files

note bottom of AbstractFile
    Hàm khởi tạo:
    - Khởi tạo hai biến name và dateCreated
    - Gán giá trị name cho path
end note

note left of AbstractFile::getPath
    Trả về giá trị biến path
end note

note left of File
    getTreeFolder: trả về biến name
end note
@enduml